@@ -69,14 +69,20 @@ monitored for reading.
 monitored for writing.
     itb(void setAlarm(int sec, int usec = 0))
         This member sets the alarm at the indicated seconds and
-milli-seconds. If no action occurred on one of the monitored file
-descriptions, tt(wait()) will return with tt(nREady()) returning 0.
+micro-seconds. If no action occurred on one of the monitored file descriptions
+following the indicated amount of time, tt(wait()) will return with
+tt(nReady()) returning 0. The requested alarm time (tt(sec + usec / 1e+6)) may
+not be negative and may not exceed tt(INT_MAX) or an bf(FBB::Errno) exception
+(em(Selector::setAlarm())) will be thrown. A 0 alarm time specification
+results in tt(wait()) returning immediately. To switch off the alarm time use
+tt(noAlarm()).
     itb(int wait())
         This member should be called to wait for activities on the installed
-file descriptors or timeout-period. The members tt(nReady()) and tt(get...())
-show their defined behaviors only after bf(wait()) has returned.  It throws an
-bf(FBB::Errno) exception when tt(select()) fails, which may very well indicate
-the end of any available input.
+file descriptors or timeout-period. The members tt(exceptFd(), nReady(),
+readFd()) and tt(writeFd()) show their defined behaviors only after bf(wait())
+has returned.  It throws an bf(FBB::Errno) exception when tt(select()) fails,
+which may very well indicate the end of any available input. Otherwise it
+returns the number of available file descriptors.
     itb(int writeFd())
         Returns -1 of no more file descriptors are available for
 writing. Otherwise the next available file descriptor for writing is
