@@ -1,4 +1,7 @@
 #include "selector"
 
+#include <bobcat/errno>
+#include <limits.h>
+
 using namespace std;
 using namespace FBB;
