@@ -1,3 +1,13 @@
+bobcat (2.03.00) ISN
+
+  * Removed deprecated get...Fd() members from Selector
+  * Selector's setAlarm() member performs a validity check on the specified 
+    alarm time 
+  * Selector's wait() member handles no-alarm specifications correctly (i.e., 
+    according to the description in the select(2) man-page.
+
+ -- Frank B. Brokken STAMP
+
 bobcat (2.02.03)
 
   * Missed another EOF in MultiStreambuf. Now repaired.
